--- a/src/main/resources/gameover.css
+++ b/src/main/resources/gameover.css
@@ -2,6 +2,11 @@
     -fx-background-image: url("bg_game_over.jpg");
 }
 
+/*#game-over-buttons {*/
+/*    -fx-start-margin: 500 600;*/
+
+/*}*/
+
 #text {
     -fx-font-size: 30px;
     -fx-alignment: center;
@@ -15,7 +20,7 @@
 #go {
     -fx-border-color: black;
     -fx-pref-width: 300px;
-    -fx-alignment: bottom-center;
+    -fx-alignment: bottom;
     -fx-padding: 5 10 5 10;
     -fx-font-family: "Arial";
     -fx-font-size: 20px;
