--- a/src/main/resources/gameover.css
+++ b/src/main/resources/gameover.css
@@ -12,7 +12,7 @@
     -fx-border-width: 2;
 }
 
-#go {
+#go, #go-exit {
     -fx-border-color: black;
     -fx-pref-width: 300px;
     -fx-alignment: bottom-center;
