--- a/src/main/resources/style.css
+++ b/src/main/resources/style.css
@@ -42,12 +42,30 @@
 }
 
 #allbtn {
-    -fx-border-color: black;
+    -fx-background-image: url("neon-button-default.png");
+    -fx-background-color: transparent;
+    -fx-background-size: 300px 35px;
+    /*-fx-border-color: black;*/
+    /*-fx-sha*/
     -fx-pref-width: 300px;
     -fx-padding: 5 10 5 10;
-    -fx-font-family: "Arial";
+    -fx-font-family: "Monospaced";
     -fx-font-size: 20px;
-    -fx-text-fill: grey;
+    -fx-text-fill: white;
+}
+
+#allbtn:hover{
+    -fx-background-image: url("neon-button-push.png") ;
+    -fx-background-size: 300px 40px;
+    -fx-background-color: transparent;
+    -fx-background-insets: 0 0 -1 0, 0, 1, 2;
+    -fx-pref-width: 300px;
+    -fx-pref-height: 40px;
+    -fx-padding: 5 10 5 10;
+    -fx-font-family: "Monospaced";
+    -fx-font-weight: bold;
+    -fx-font-size: 20px;
+    -fx-text-fill: white;
 }
 
 #pick-up-btn, #next-level-btn {
